--- a/VNC.VSTOAddin/VNC.VSTOAddIn.csproj
+++ b/VNC.VSTOAddin/VNC.VSTOAddIn.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net481</TargetFrameworks>
+        <TargetFrameworks>net48</TargetFrameworks>
         <ImplicitUsings>disable</ImplicitUsings>
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
@@ -19,6 +19,7 @@
         <RepositoryUrl>https://github.com/chrhodes/vncoffice</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <PackageTags>vsto;mvvm</PackageTags>
+        <PackageIcon>VNC.png</PackageIcon>
         <Authors>Christopher Rhodes</Authors>
         <Copyright>Copyright © VNC 2024</Copyright>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
