--- a/SupportTools_Excel/ModuleOptions/ModuleOptions.csproj
+++ b/SupportTools_Excel/ModuleOptions/ModuleOptions.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <TargetFramework>net4.8</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
     <UseWPF>true</UseWPF>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
@@ -15,29 +15,39 @@
   </PropertyGroup>
   
   <ItemGroup>
-   <PackageReference Include="DevExpress.Wpf.Core" Version="21.2.7" />
-   <PackageReference Include="DevExpress.Wpf.Core.Extensions" Version="21.2.7" />   
-   <PackageReference Include="DevExpress.Wpf.Grid" Version="21.2.7" />
-   <PackageReference Include="DevExpress.Wpf.LayoutControl" Version="21.2.7" />
+   <PackageReference Include="DevExpress.Wpf.Core" Version="22.1.3" />
+   <PackageReference Include="DevExpress.Wpf.Core.Extensions" Version="22.1.3" />   
+   <PackageReference Include="DevExpress.Wpf.Grid" Version="22.1.3" />
+   <PackageReference Include="DevExpress.Wpf.LayoutControl" Version="22.1.3" />
    <!-- <PackageReference Include="DevExpress.Wpf.Navigation" Version="21.2.7" /> -->
-   <PackageReference Include="EntityFramework" Version="6.4.4" />
+   <PackageReference Include="EntityFramework" Version="6.5.1" />
    <PackageReference Include="Prism.Unity" Version="8.1.97" />
    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
-   <PackageReference Include="VNC.Core" Version="2.1.4" />
    </ItemGroup>
    
-  <!-- <ItemGroup> -->
-    <!-- <ProjectReference Include="..\Explore.Core\Explore.Core.csproj" /> -->
-  <!-- </ItemGroup> -->
-  
-  <!--<ItemGroup>
-    <ProjectReference Include="..\..\vnc\VNC.Core\VNC.Core.csproj" />
-    <ProjectReference Include="..\..\vnc\VNC.Logging\VNC.Logging\VNC.Logging.csproj" />
-  </ItemGroup>-->
-
     <ItemGroup>
         <!-- Workaround for https://github.com/dotnet/wpf/issues/2648#issuecomment-635674683 -->
         <Reference Include="System.Web" />
     </ItemGroup>
+
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-windows|AnyCPU'">
+        <!-- Uncoment next line to switch to ProjectReference(s) -->
+        <!-- <DefineConstants>$(DefineConstants);VNCPROJECTREF</DefineConstants> -->
+    </PropertyGroup>
+
+    <Choose>
+        <When Condition="'$(DefineConstants.Contains(VNCPROJECTREF))'">
+            <ItemGroup>
+                <ProjectReference Include="..\VNC.VSTOAddIn\VNC.VSTOAddIn.csproj" />
+                <ProjectReference Include="..\VNC.Core\VNC.Core.csproj" />
+            </ItemGroup>
+        </When>
+        <When Condition="'!$(DefineConstants.Contains(VNCPROJECTREF))'">
+            <ItemGroup>
+                <PackageReference Include="VNC.VSTOAddIn" Version="1.0.0" />
+                <PackageReference Include="VNC.Core" Version="2.1.6" />
+            </ItemGroup>
+        </When>
+    </Choose>    
     
 </Project>
