--- a/VNC.Visio.VSTOAddin/VNC.Visio.VSTOAddIn.csproj
+++ b/VNC.Visio.VSTOAddin/VNC.Visio.VSTOAddIn.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net481</TargetFrameworks>
+        <TargetFrameworks>net48</TargetFrameworks>
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -9,8 +9,8 @@
         <RootNamespace>VNC.Visio.VSTOAddIn</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <VersionPrefix>1.0.0</VersionPrefix>
-        <VersionSuffix>Release-1</VersionSuffix>
-        <FileVersion>2024.06.22A</FileVersion>
+        <VersionSuffix>Development</VersionSuffix>
+        <FileVersion>2024.06.25A</FileVersion>
         <PackageVersion>1.0.0</PackageVersion>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -18,6 +18,7 @@
         <RepositoryUrl>https://github.com/chrhodes/vncoffice</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
         <PackageTags>vsto;mvvm;visio</PackageTags>
+        <PackageIcon>VNC.png</PackageIcon>        
         <Authors>Christopher Rhodes</Authors>
         <Copyright>Copyright © VNC 2024</Copyright>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
@@ -25,13 +26,17 @@
         <SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net48|AnyCPU'">
-      <DefineConstants>$(DefineConstants);VNCLOGGING</DefineConstants>
-    </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net48|AnyCPU'">
-      <DefineConstants>$(DefineConstants);VNCLOGGING</DefineConstants>
-    </PropertyGroup>
+    <ItemGroup>
+        <COMReference Include="Microsoft.Office.Interop.Visio">
+            <WrapperTool>tlbimp</WrapperTool>
+            <VersionMinor>16</VersionMinor>
+            <VersionMajor>4</VersionMajor>
+            <Guid>00021a98-0000-0000-c000-000000000046</Guid>
+            <Lcid>0</Lcid>
+            <Isolated>false</Isolated>
+            <EmbedInteropTypes>true</EmbedInteropTypes>
+        </COMReference>
+    </ItemGroup> 
 
     <ItemGroup>
         <None Include="LICENSE">
@@ -46,20 +51,32 @@
             <Pack>True</Pack>
             <PackagePath></PackagePath>
         </None>
-    </ItemGroup>
+    </ItemGroup> 
 
     <ItemGroup>
-      <PackageReference Include="VNC.Core" Version="2.1.6" />
+      <ProjectReference Include="..\VNC.VSTOAddin\VNC.VSTOAddin.csproj" />
     </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\VNC.VSTOAddin\VNC.VSTOAddIn.csproj" />
-    </ItemGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-windows|AnyCPU'">
+        <!-- Uncoment next line to switch to ProjectReference(s) -->
+         <DefineConstants>$(DefineConstants);VNCLOGGING;VNCPROJECTREF</DefineConstants> 
+    </PropertyGroup>
 
-    <ItemGroup>
-      <Reference Include="Microsoft.Office.Interop.Visio">
-        <HintPath>C:\Program Files (x86)\Microsoft Visual Studio\Shared\Visual Studio Tools for Office\PIA\Office15\Microsoft.Office.Interop.Visio.dll</HintPath>
-      </Reference>
-    </ItemGroup>
-    
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net48|AnyCPU'">
+        <DefineConstants>$(DefineConstants);VNCLOGGING;VNCPROJECTREF</DefineConstants>
+    </PropertyGroup>
+
+    <Choose>
+        <When Condition="'$(DefineConstants.Contains(VNCPROJECTREF))'">
+            <ItemGroup>
+                <ProjectReference Include="..\..\VNCDevelopment\VNC.Core\VNC.Core.csproj" />
+            </ItemGroup>
+        </When>
+        <When Condition="'!$(DefineConstants.Contains(VNCPROJECTREF))'">
+            <ItemGroup>
+                <PackageReference Include="VNC.Core" Version="2.1.6" />
+            </ItemGroup>
+        </When>
+    </Choose>
+
 </Project>
