--- a/VNC.Visio.VSTOAddin/VNC.Visio.VSTOAddIn.csproj
+++ b/VNC.Visio.VSTOAddin/VNC.Visio.VSTOAddIn.csproj
@@ -10,7 +10,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <VersionPrefix>1.0.0</VersionPrefix>
         <VersionSuffix>Development</VersionSuffix>
-        <FileVersion>2024.06.25A</FileVersion>
+        <FileVersion>2025.08.01A</FileVersion>
         <PackageVersion>1.0.0</PackageVersion>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -20,9 +20,9 @@
         <PackageTags>vsto;mvvm;visio</PackageTags>
         <PackageIcon>VNC.png</PackageIcon>        
         <Authors>Christopher Rhodes</Authors>
-        <Copyright>Copyright © VNC 2024</Copyright>
+        <Copyright>Copyright © VNC 2025</Copyright>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-        <Description>VNC Visio VSTO AddIn Helper</Description>
+        <Description>VNC Visio VSTO AddIn</Description>
         <SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>
     </PropertyGroup>
 
@@ -55,6 +55,21 @@
 
     <ItemGroup>
       <PackageReference Include="VNC.Core" Version="2.1.7" />
+    </ItemGroup> 
+
+    <ItemGroup>
+      <Compile Update="Properties\Settings.Designer.cs">
+        <DesignTimeSharedInput>True</DesignTimeSharedInput>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Settings.settings</DependentUpon>
+      </Compile>
+    </ItemGroup> 
+
+    <ItemGroup>
+      <None Update="Properties\Settings.settings">
+        <Generator>SettingsSingleFileGenerator</Generator>
+        <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+      </None>
     </ItemGroup> 
 
     <!--<ItemGroup>
