--- a/VNC.Visio.VSTOAddin/VNC.Visio.VSTOAddIn.csproj
+++ b/VNC.Visio.VSTOAddin/VNC.Visio.VSTOAddIn.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net48</TargetFrameworks>
+        <TargetFrameworks>net481</TargetFrameworks>
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
@@ -10,7 +10,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <VersionPrefix>1.0.0</VersionPrefix>
         <VersionSuffix>Development</VersionSuffix>
-        <FileVersion>2025.08.01A</FileVersion>
+        <FileVersion>2025.08.06A</FileVersion>
         <PackageVersion>1.0.0</PackageVersion>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -72,24 +72,25 @@
       </None>
     </ItemGroup> 
 
-    <!--<ItemGroup>
-      <ProjectReference Include="..\VNC.VSTOAddin\VNC.VSTOAddIn.csproj" />
-    </ItemGroup>-->
-
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-windows|AnyCPU'">
-        <!-- Uncoment next line to switch to ProjectReference(s) -->
+    <!--<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-windows|AnyCPU'">
+        --><!-- Uncoment next line to switch to ProjectReference(s) --><!--
          <DefineConstants>$(DefineConstants);VNCLOGGING;VNCPROJECTREF</DefineConstants> 
-    </PropertyGroup>
+    </PropertyGroup>-->
 
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net48|AnyCPU'">
+    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net481|AnyCPU'">
+        <!-- Uncoment next line to switch to ProjectReference(s) -->
         <DefineConstants>$(DefineConstants);VNCLOGGING;VNCPROJECTREF</DefineConstants>
     </PropertyGroup>
 
     <Choose>
-        <When Condition="'$(DefineConstants.Contains(VNCPROJECTREF))'" />
+        <When Condition="'$(DefineConstants.Contains(VNCPROJECTREF))'">
+            <ItemGroup>
+                <ProjectReference Include="..\VNC.VSTOAddin\VNC.VSTOAddIn.csproj" />
+            </ItemGroup>
+        </When>
         <When Condition="'!$(DefineConstants.Contains(VNCPROJECTREF))'">
             <ItemGroup>
-                <PackageReference Include="VNC.Core" Version="2.1.7" />
+                <!--<PackageReference Include="VNC.VSTOAddIn" Version="1.0.0" />-->
             </ItemGroup>
         </When>
     </Choose>
