--- a/VNCVisioTools/VNCVisioTools/App.config
+++ b/VNCVisioTools/VNCVisioTools/App.config
@@ -7,12 +7,51 @@
              Version=6.0.0.0, Culture=neutral,
              PublicKeyToken=d702d1a3426498a0"/>
     </configSections>
-    <loggingConfiguration name="SupportTools_Visio" tracingEnabled="true" defaultCategory="General" logWarningsWhenNoCategoriesMatch="true">
+    <loggingConfiguration name="VNCVisioTools" tracingEnabled="true" defaultCategory="General" logWarningsWhenNoCategoriesMatch="true">
         <listeners>
-            <add name="FlatFile TraceListener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" fileName="C:\temp\logs\VSTO\SupportTools_Visio.log" header="" footer="" traceOutputOptions="None" formatter="FlatFile Formatter"/>
-            <add name="Rolling FlatFile TraceListener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener,                              Microsoft.Practices.EnterpriseLibrary.Logging,                Version=6.0.0.0, Culture=neutral,                PublicKeyToken=d702d1a3426498a0" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData,                           Microsoft.Practices.EnterpriseLibrary.Logging,             Version=6.0.0.0, Culture=neutral,             PublicKeyToken=d702d1a3426498a0" fileName="C:\temp\logs\VSTO\SupportTools_Visio.log" header="" footer="" rollInterval="Day" maxArchivedFiles="7" formatter="FlatFile Formatter"/>
-            <add name="Formatted EventLog TraceListener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData,              Microsoft.Practices.EnterpriseLibrary.Logging,         Version=6.0.0.0, Culture=neutral,        PublicKeyToken=d702d1a3426498a0" source="Enterprise Library Logging" log="Application" machineName="" traceOutputOptions="None" formatter="Text Formatter"/>
-            <add name="SignalRListener" type="VNC.Logging.TraceListeners.SignalRListener,              VNC.Logging.TraceListeners.SignalRListener,              Version=1.0.0.0, Culture=neutral,              PublicKeyToken=6621de8a79b51ca3" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.CustomTraceListenerData,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" formatter="LiveView Formatter"/>
+            <add name="FlatFile TraceListener" 
+                 type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener,
+                 Microsoft.Practices.EnterpriseLibrary.Logging,
+                 Version=6.0.0.0, Culture=neutral,
+                 PublicKeyToken=d702d1a3426498a0" 
+                 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData,
+                    Microsoft.Practices.EnterpriseLibrary.Logging,
+                    Version=6.0.0.0, Culture=neutral,
+                    PublicKeyToken=d702d1a3426498a0" 
+                 fileName="C:\temp\logs\VSTO\VNCVisioTools.log" 
+                 header="" footer="" traceOutputOptions="None" formatter="FlatFile Formatter"/>
+            <add name="Rolling FlatFile TraceListener" 
+                 type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener,
+                 Microsoft.Practices.EnterpriseLibrary.Logging,
+                 Version=6.0.0.0, Culture=neutral,
+                 PublicKeyToken=d702d1a3426498a0" 
+                 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, 
+                    Microsoft.Practices.EnterpriseLibrary.Logging,
+                    Version=6.0.0.0, Culture=neutral,
+                    PublicKeyToken=d702d1a3426498a0" 
+                 fileName="C:\temp\logs\VSTO\VNCVisioTools.log" 
+                 header="" footer="" rollInterval="Day" maxArchivedFiles="7" formatter="FlatFile Formatter"/>
+            <add name="Formatted EventLog TraceListener" 
+                 type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener,
+                 Microsoft.Practices.EnterpriseLibrary.Logging,
+                 Version=6.0.0.0, Culture=neutral,
+                 PublicKeyToken=d702d1a3426498a0" 
+                 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, 
+                 Microsoft.Practices.EnterpriseLibrary.Logging,
+                 Version=6.0.0.0, Culture=neutral,
+                 PublicKeyToken=d702d1a3426498a0" 
+                 source="Enterprise Library Logging" 
+                 log="Application" machineName="" traceOutputOptions="None" formatter="Text Formatter"/>
+            <add name="SignalRListener" 
+                 type="VNC.Logging.TraceListeners.SignalRListener,
+                 VNC.Logging.TraceListeners.SignalRListener,
+                 Version=1.0.0.0, Culture=neutral,
+                 PublicKeyToken=6621de8a79b51ca3" 
+                 listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.CustomTraceListenerData,
+                 Microsoft.Practices.EnterpriseLibrary.Logging,
+                 Version=6.0.0.0, Culture=neutral,
+                 PublicKeyToken=d702d1a3426498a0" 
+                 formatter="LiveView Formatter"/>
         </listeners>
         <formatters>
             <add name="ErrorLog Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter,              Microsoft.Practices.EnterpriseLibrary.Logging,              Version=6.0.0.0, Culture=neutral,              PublicKeyToken=d702d1a3426498a0" template="Timestamp: {timestamp(local:yyyy/MM/dd HH:mm:ss.fff)} Message:{keyvalue(Class Name)}.{keyvalue(Method Name)} &gt;  {message} Category: {category} Priority: {priority} Severity: {severity} Process: {processName} - {processId} Thread: {threadName} - {win32ThreadId} User:{keyvalue(User Name)} Title:{title} EventId: {eventid} Machine: {machine} Application Domain: {appDomain} Extended Properties: {dictionary({key} - {value} )}"/>
