Good progress on getting new About AddInfo running.  Need to add more assemblies.

--- a/VNC.VSTOAddin/VNC.VSTOAddIn.csproj
+++ b/VNC.VSTOAddin/VNC.VSTOAddIn.csproj
@@ -47,6 +47,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\VNCDevelopment\VNC.Core\VNC.Core.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
       <Reference Include="PresentationCore" />
     </ItemGroup>
 
