--- a/VNCVisioTools/VNCVisioTools/App.config
+++ b/VNCVisioTools/VNCVisioTools/App.config
@@ -93,7 +93,13 @@
                     <!--<add name="SignalRListener"/>-->
                 </listeners>
             </add>
-            <add switchValue="All" name="VNCVisioAddInApplication">
+            <add switchValue="All" name="VNCVisioTools">
+                <listeners>
+                    <add name="Rolling FlatFile TraceListener"/>
+                    <!--<add name="SignalRListener"/>-->
+                </listeners>
+            </add>
+            <add switchValue="All" name="VNCVisioToolsApplication">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
                     <!--<add name="SignalRListener"/>-->
