--- a/VNC.Visio.VSTOAddin/VNC.Visio.VSTOAddIn.csproj
+++ b/VNC.Visio.VSTOAddin/VNC.Visio.VSTOAddIn.csproj
@@ -10,7 +10,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <VersionPrefix>1.0.0</VersionPrefix>
         <VersionSuffix>Development</VersionSuffix>
-        <FileVersion>2025.08.06A</FileVersion>
+        <FileVersion>2025.08.15A</FileVersion>
         <PackageVersion>1.0.0</PackageVersion>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
@@ -54,10 +54,6 @@
     </ItemGroup> 
 
     <ItemGroup>
-      <PackageReference Include="VNC.Core" Version="2.1.7" />
-    </ItemGroup> 
-
-    <ItemGroup>
       <Compile Update="Properties\Settings.Designer.cs">
         <DesignTimeSharedInput>True</DesignTimeSharedInput>
         <AutoGen>True</AutoGen>
@@ -77,7 +73,7 @@
          <DefineConstants>$(DefineConstants);VNCLOGGING;VNCPROJECTREF</DefineConstants> 
     </PropertyGroup>-->
 
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net481|AnyCPU'">
+    <PropertyGroup Condition="'$(Configuration)'=='Debug'">
         <!-- Uncoment next line to switch to ProjectReference(s) -->
         <DefineConstants>$(DefineConstants);VNCLOGGING;VNCPROJECTREF</DefineConstants>
     </PropertyGroup>
@@ -86,11 +82,13 @@
         <When Condition="'$(DefineConstants.Contains(VNCPROJECTREF))'">
             <ItemGroup>
                 <ProjectReference Include="..\VNC.VSTOAddin\VNC.VSTOAddIn.csproj" />
+                <ProjectReference Include="..\..\VNCDevelopment\VNC.Core\VNC.Core.csproj" />                
             </ItemGroup>
         </When>
         <When Condition="'!$(DefineConstants.Contains(VNCPROJECTREF))'">
             <ItemGroup>
-                <!--<PackageReference Include="VNC.VSTOAddIn" Version="1.0.0" />-->
+                <PackageReference Include="VNC.VSTOAddIn" Version="1.0.0" />
+                <PackageReference Include="VNC.Core" Version="3.2.0" />
             </ItemGroup>
         </When>
     </Choose>
