--- a/VNCVisioTools/VNCVisioToolsApplication/VNCVisioToolsApplication.csproj
+++ b/VNCVisioTools/VNCVisioToolsApplication/VNCVisioToolsApplication.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Presentation\Views\About.xaml" />
+    <None Remove="Presentation\Views\AppVersionInfo.xaml" />
     <None Remove="Presentation\Views\CommandCockpit.xaml" />
     <None Remove="Presentation\Views\DuplicatePage.xaml" />
     <None Remove="Presentation\Views\EditControlPoints.xaml" />
@@ -19,6 +21,7 @@
     <None Remove="Presentation\Views\ViewC1.xaml" />
     <None Remove="Presentation\Views\ViewC2.xaml" />
     <None Remove="Resources\Xaml\Application.xaml" />
+    <None Remove="Resources\Xaml\Display_StylesAndTemplates.xaml" />
     <None Remove="Resources\Xaml\Layout_Styles.xaml" />
   </ItemGroup>
 
@@ -46,6 +49,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Include="Presentation\Views\About.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Presentation\Views\AppVersionInfo.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Presentation\Views\CommandCockpit.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -89,6 +98,9 @@
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Page>
+    <Page Include="Resources\Xaml\Display_StylesAndTemplates.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\Xaml\Layout_Styles.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -106,6 +118,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Presentation\Views\UserControls\" />
+  </ItemGroup>
+
     <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net481|AnyCPU'">
         <!-- Uncoment next line to switch to ProjectReference(s) -->
          <DefineConstants>$(DefineConstants);VNCPROJECTREF</DefineConstants> 
@@ -115,14 +131,16 @@
         <When Condition="'$(DefineConstants.Contains(VNCPROJECTREF))'">
             <ItemGroup>
                 <ProjectReference Include="..\VNCVisioToolsApplication.Core\VNCVisioToolsApplication.Core.csproj" />                  
-                <ProjectReference Include="..\..\VNC.Visio.VSTOAddin\VNC.Visio.VSTOAddIn.csproj" />           
+                <ProjectReference Include="..\..\VNC.Visio.VSTOAddin\VNC.Visio.VSTOAddIn.csproj" />
+                <ProjectReference Include="..\..\..\VNCDevelopment\VNC.WPF.Presentation\VNC.WPF.Presentation.csproj" />
                 <!--<ProjectReference Include="..\..\VNC.VSTOAddin\VNC.VSTOAddIn.csproj" />-->
             </ItemGroup>
         </When>
         <When Condition="'!$(DefineConstants.Contains(VNCPROJECTREF))'">
             <ItemGroup>
-                <!--<PackageReference Include="VNC.Visio.VSTOAddIn" Version="1.0.0" />-->
-                <!--<PackageReference Include="VNC.VSTOAddIn" Version="1.0.0" />-->                
+                <PackageReference Include="VNC.Visio.VSTOAddIn" Version="1.0.0" />
+                <PackageReference Include="VNC.WPF.Presentation" Version="3.2.0" />
+                <!--<PackageReference Include="VNC.VSTOAddIn" Version="1.0.0" />-->             
             </ItemGroup>
         </When>
     </Choose>
