--- a/VNC.VSTOAddin/VNC.VSTOAddIn.csproj
+++ b/VNC.VSTOAddin/VNC.VSTOAddIn.csproj
@@ -2,30 +2,41 @@
 
     <PropertyGroup>
         <TargetFrameworks>net481</TargetFrameworks>
-        <ImplicitUsings>disable</ImplicitUsings>
         <!--<UseWPF>true</UseWPF>-->
         <UseWindowsForms>true</UseWindowsForms>
-        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
         <AssemblyName>VNC.VSTOAddIn</AssemblyName>
         <RootNamespace>VNC.VSTOAddIn</RootNamespace>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>VNC.snk</AssemblyOriginatorKeyFile>
         <VersionPrefix>1.0.0</VersionPrefix>
         <VersionSuffix>Release</VersionSuffix>
-        <FileVersion>2025.08.06A</FileVersion>
+        <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
+        <FileVersion>2025.08.17</FileVersion>
+        <Description>VNC VSTO AddIn Helper</Description>
+        <LangVersion>12.0</LangVersion>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>disable</ImplicitUsings>
+    </PropertyGroup>
+
+    <!-- This is for NuGet Packages -->
+
+    <PropertyGroup>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageVersion>1.0.0</PackageVersion>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageProjectUrl>https://github.com/chrhodes/vncoffice</PackageProjectUrl>
         <RepositoryUrl>https://github.com/chrhodes/vncoffice</RepositoryUrl>
         <RepositoryType>Git</RepositoryType>
-        <PackageTags>vsto;mvvm</PackageTags>
+        <PackageTags></PackageTags>
         <PackageIcon>VNC.png</PackageIcon>
         <Authors>Christopher Rhodes</Authors>
+        <Company>VNC</Company>
         <Copyright>Copyright © VNC 2025</Copyright>
         <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-        <Description>VNC VSTO AddIn Helper</Description>
         <SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>
-    </PropertyGroup>
+    </PropertyGroup>   
 
     <ItemGroup>
         <None Include="LICENSE">
@@ -46,9 +57,23 @@
       <PackageReference Include="VNC.AssemblyHelper" Version="2.0.0" />
     </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\..\VNCDevelopment\VNC.Core\VNC.Core.csproj" />
-    </ItemGroup>
+    <PropertyGroup Condition="'$(Configuration)'=='Debug'">
+        <!-- Uncoment next line to switch to ProjectReference(s) -->
+        <DefineConstants>$(DefineConstants);VNCPROJECTREF</DefineConstants>
+    </PropertyGroup>
+
+    <Choose>
+        <When Condition="'$(DefineConstants.Contains(VNCPROJECTREF))'">
+            <ItemGroup>
+                <ProjectReference Include="..\..\VNCDevelopment\VNC.Core\VNC.Core.csproj" />
+            </ItemGroup>
+        </When>
+        <When Condition="'!$(DefineConstants.Contains(VNCPROJECTREF))'">
+            <ItemGroup>
+                <PackageReference Include="VNC.Core" Version="3.2.0" />
+            </ItemGroup>
+        </When>
+    </Choose>
 
     <ItemGroup>
       <Reference Include="PresentationCore" />
