--- a/VNCVisioTools/VNCVisioTools/VNCVisioTools.csproj
+++ b/VNCVisioTools/VNCVisioTools/VNCVisioTools.csproj
@@ -241,22 +241,30 @@
     <Folder Include="Resources\Xaml\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\VNCDevelopment\VNC.Core\VNC.Core.csproj">
-      <Project>{1928bc7a-d1f6-a566-a8e6-e808d4dab9fd}</Project>
-      <Name>VNC.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\VNCDevelopment\VNC.Logging\VNC.Logging\VNC.Logging.csproj">
-      <Project>{1396838b-1e2a-a2f4-bb0f-3e3848fe4c2a}</Project>
-      <Name>VNC.Logging</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\VNC.VSTOAddin\VNC.VSTOAddIn.csproj">
-      <Project>{1cc80f79-387b-0e6b-af64-919fef85a636}</Project>
-      <Name>VNC.VSTOAddIn</Name>
-    </ProjectReference>
     <ProjectReference Include="..\VNCVisioToolsApplication\VNCVisioToolsApplication.csproj">
       <Project>{735d2649-a616-4952-9b78-43fc1b8a10f8}</Project>
       <Name>VNCVisioToolsApplication</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Build.Tasks.Core">
+      <Version>17.14.8</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens">
+      <Version>8.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt">
+      <Version>8.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="VNC.Core">
+      <Version>3.2.0</Version>
+    </PackageReference>
+    <PackageReference Include="VNC.VSTOAddIn">
+      <Version>1.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
