--- a/VNCVisioTools/VNCVisioToolsApplication/VNCVisioToolsApplication.csproj
+++ b/VNCVisioTools/VNCVisioToolsApplication/VNCVisioToolsApplication.csproj
@@ -1,10 +1,43 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net481</TargetFramework>
+    <TargetFrameworks>net481</TargetFrameworks>
+      <UseWPF>true</UseWPF>
+      <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+      <AssemblyName>VNCVisioToolsApplication</AssemblyName>
+      <RootNamespace>VNCVisioToolsApplication</RootNamespace>
+      <!--<SignAssembly>true</SignAssembly>-->
+      <!--<AssemblyOriginatorKeyFile>VNC.snk</AssemblyOriginatorKeyFile>-->
+      <VersionPrefix>1.0.0</VersionPrefix>
+      <VersionSuffix>Development</VersionSuffix>
+      <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
+      <FileVersion>2025.08.15</FileVersion>
+      <Description>VNCVisioToolsApplication</Description>
+      <LangVersion>12.0</LangVersion>
+      <Nullable>enable</Nullable>
+      <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
+    <!-- This is for NuGet Packages -->
+
+    <PropertyGroup>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageVersion>1.0.0</PackageVersion>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <PackageProjectUrl>https://github.com/chrhodes/vncoffice</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/chrhodes/vncoffice</RepositoryUrl>
+        <RepositoryType>Git</RepositoryType>
+        <PackageTags></PackageTags>
+        <PackageIcon>VNC.png</PackageIcon>
+        <Authors>Christopher Rhodes</Authors>
+        <Company>VNC</Company>
+        <Copyright>Copyright © VNC 2025</Copyright>
+        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+        <SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>
+    </PropertyGroup>    
+
+  <!--<ItemGroup>
     <None Remove="Presentation\Views\About.xaml" />
     <None Remove="Presentation\Views\AppVersionInfo.xaml" />
     <None Remove="Presentation\Views\CommandCockpit.xaml" />
@@ -23,7 +56,7 @@
     <None Remove="Resources\Xaml\Application.xaml" />
     <None Remove="Resources\Xaml\Display_StylesAndTemplates.xaml" />
     <None Remove="Resources\Xaml\Layout_Styles.xaml" />
-  </ItemGroup>
+  </ItemGroup>-->
 
   <ItemGroup>
     <Content Include="Resources\Icons\VisioAddin.ico">
@@ -45,65 +78,6 @@
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
     <PackageReference Include="VNC.AZDO" Version="2.0.1" />
     <PackageReference Include="VNC.CodeAnalysis" Version="2.0.0" />
-    <PackageReference Include="VNC.WPF.Presentation.Dx" Version="2.1.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Page Include="Presentation\Views\About.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\AppVersionInfo.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\CommandCockpit.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\DuplicatePage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\EditControlPoints.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\EditControlRows.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\EditParagraph.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\EditText.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\MovePage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\PrismRegionTest.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\RenamePage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\ViewA.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\ViewB.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\ViewC1.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Presentation\Views\ViewC2.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Resources\Xaml\Application.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
-    </Page>
-    <Page Include="Resources\Xaml\Display_StylesAndTemplates.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Resources\Xaml\Layout_Styles.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
 
   <ItemGroup>
@@ -118,21 +92,45 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
 
+    <ItemGroup>
+        <!-- Workaround for https://github.com/dotnet/wpf/issues/2648#issuecomment-635674683 -->
+        <Reference Include="System.Web" />
+    </ItemGroup>
+    
   <ItemGroup>
     <Folder Include="Presentation\Views\UserControls\" />
   </ItemGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net481|AnyCPU'">
+    <ItemGroup>
+        <None Include="LICENSE">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+        <None Include="README.md">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+        <None Include="VNC.png">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\VNCVisioToolsApplication.Core\VNCVisioToolsApplication.Core.csproj" />
+    </ItemGroup>    
+
+    <PropertyGroup Condition="'$(Configuration)'=='Debug'">
         <!-- Uncoment next line to switch to ProjectReference(s) -->
          <DefineConstants>$(DefineConstants);VNCPROJECTREF</DefineConstants> 
     </PropertyGroup>
 
     <Choose>
         <When Condition="'$(DefineConstants.Contains(VNCPROJECTREF))'">
-            <ItemGroup>
-                <ProjectReference Include="..\VNCVisioToolsApplication.Core\VNCVisioToolsApplication.Core.csproj" />                  
+            <ItemGroup>               
                 <ProjectReference Include="..\..\VNC.Visio.VSTOAddin\VNC.Visio.VSTOAddIn.csproj" />
                 <ProjectReference Include="..\..\..\VNCDevelopment\VNC.WPF.Presentation\VNC.WPF.Presentation.csproj" />
+                <ProjectReference Include="..\..\..\VNCDevelopment\VNC.WPF.Presentation.Dx\VNC.WPF.Presentation.Dx.csproj" />                
                 <!--<ProjectReference Include="..\..\VNC.VSTOAddin\VNC.VSTOAddIn.csproj" />-->
             </ItemGroup>
         </When>
@@ -140,6 +138,7 @@
             <ItemGroup>
                 <PackageReference Include="VNC.Visio.VSTOAddIn" Version="1.0.0" />
                 <PackageReference Include="VNC.WPF.Presentation" Version="3.2.0" />
+                <PackageReference Include="VNC.WPF.Presentation.Dx" Version="3.2.0" />
                 <!--<PackageReference Include="VNC.VSTOAddIn" Version="1.0.0" />-->             
             </ItemGroup>
         </When>
