--- a/VNCVisioTools/VNCVisioToolsApplication.Core/VNCVisioToolsApplication.Core.csproj
+++ b/VNCVisioTools/VNCVisioToolsApplication.Core/VNCVisioToolsApplication.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFrameworks>net8.0-windows;net481</TargetFrameworks>
@@ -6,7 +6,7 @@
         <VersionPrefix>1.0.0</VersionPrefix>
         <VersionSuffix>development</VersionSuffix>
         <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
-        <FileVersion>YYYY.MM.DD</FileVersion>
+        <FileVersion>2025.08.19</FileVersion>
         <Description>describe assembly</Description>
         <LangVersion>12.0</LangVersion>
         <Nullable>enable</Nullable>
@@ -30,6 +30,21 @@
         <!-- <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance> -->
         <!-- <SatelliteResourceLanguages>en-US</SatelliteResourceLanguages> -->
     <!-- </PropertyGroup> -->
+
+    <!--<ItemGroup>
+        <None Include="LICENSE">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+        <None Include="README.md">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+        <None Include="VNC.png">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>-->
 
     <ItemGroup>
         <PackageReference Include="Prism.Core" Version="8.1.97" />
