Grrr.  Trying to get SignalRLogging to work (again?).  Checking in code so have a smaller surface to work with

--- a/VNCVisioTools/VNCVisioTools/App.config
+++ b/VNCVisioTools/VNCVisioTools/App.config
@@ -173,12 +173,14 @@
             <allEvents switchValue="All" name="All Events"/>
             <notProcessed switchValue="All" name="Unprocessed Category">
                 <listeners>
-                    <add name="Formatted EventLog TraceListener"/>
+                    <add name="Rolling FlatFile TraceListener"/>
+                    <!--<add name="SignalRListener"/>-->
                 </listeners>
             </notProcessed>
             <errors switchValue="All" name="Logging Errors &amp; Warnings">
                 <listeners>
-                    <add name="Formatted EventLog TraceListener"/>
+                    <add name="Rolling FlatFile TraceListener"/>
+                    <!--<add name="SignalRListener"/>-->
                 </listeners>
             </errors>
         </specialSources>
