Reviewed SupportTools_Visio.  Added back all QueueMarker events. Added back AZDO Actions and support classes. Added SignalRTraceListener Assemblies. Added + Background Pages

--- a/VNCVisioTools/VNCVisioTools/VNCVisioTools.csproj
+++ b/VNCVisioTools/VNCVisioTools/VNCVisioTools.csproj
@@ -254,6 +254,18 @@
     </Compile>
     <AppDesigner Include="Properties\" />
     <None Include="VisioAddIn_TemporaryKey.pfx" />
+    <None Include="vnccoreloggingconfig-Debug.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="vnccoreloggingconfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="vncloggingconfig-Debug.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="vncloggingconfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Icons\VisioAddin.ico">
