--- a/VNCVisioTools/VNCVisioTools/App.config
+++ b/VNCVisioTools/VNCVisioTools/App.config
@@ -45,7 +45,7 @@
             <add name="SignalRListener" 
                  type="VNC.Logging.TraceListeners.SignalRListener,
                  VNC.Logging.TraceListeners.SignalRListener,
-                 Version=3.2.0.0, Culture=neutral,
+                 Version=3.3.0.0, Culture=neutral,
                  PublicKeyToken=6621de8a79b51ca3" 
                  listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.CustomTraceListenerData,
                  Microsoft.Practices.EnterpriseLibrary.Logging,
@@ -111,61 +111,61 @@
             <add switchValue="All" name="General">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </add>
             <add switchValue="All" name="VNCVisioTools">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </add>
             <add switchValue="All" name="VNCVisioToolsApplication">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </add>
             <add switchValue="All" name="VNCVisioVSTOAddIn">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </add>
             <add switchValue="All" name="VSTOAddIn">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </add>
             <add switchValue="All" name="Explore">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </add>
             <add switchValue="All" name="VNCCore">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </add>
             <add switchValue="All" name="VNCPresentationDx">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </add>
             <add switchValue="All" name="VNCPresentation">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </add>
             <add switchValue="All" name="Modules">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </add>
         </categorySources>
@@ -174,13 +174,13 @@
             <notProcessed switchValue="All" name="Unprocessed Category">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </notProcessed>
             <errors switchValue="All" name="Logging Errors &amp; Warnings">
                 <listeners>
                     <add name="Rolling FlatFile TraceListener"/>
-                    <!--<add name="SignalRListener"/>-->
+                    <add name="SignalRListener"/>
                 </listeners>
             </errors>
         </specialSources>
