--- a/VNCVisioTools/VNCVisioToolsApplication/VNCVisioToolsApplication.csproj
+++ b/VNCVisioTools/VNCVisioToolsApplication/VNCVisioToolsApplication.csproj
@@ -11,7 +11,7 @@
       <VersionPrefix>1.0.0</VersionPrefix>
       <VersionSuffix>Development</VersionSuffix>
       <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
-      <FileVersion>2026.02.11</FileVersion>
+      <FileVersion>2026.02.12</FileVersion>
       <Description>VNCVisioToolsApplication</Description>
       <LangVersion>12.0</LangVersion>
       <Nullable>enable</Nullable>
@@ -72,8 +72,9 @@
     <Folder Include="Presentation\Views\UserControls\" />
   </ItemGroup>
 
-    <!--Having problems with this file and VNC.CodeAnalysis, so removing it for now.-->
+    <!--Having problems with these files and VNC.CodeAnalysis, so removing them for now.-->
     <ItemGroup>
+        <Compile Remove="Actions\RoslynActions.cs" />
         <Compile Remove="Domain\FileInfoShape.cs" />
     </ItemGroup>
     
@@ -81,7 +82,7 @@
     <PackageReference Include="CalcBinding" Version="2.5.2" />      
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
     <PackageReference Include="VNC.AZDO" Version="3.2.0" />
-    <!--<PackageReference Include="VNC.CodeAnalysis" Version="3.3.0" />-->   
+    <!--<PackageReference Include="VNC.CodeAnalysis" Version="3.3.0" />-->
     <PackageReference Include="VNC.WPF.Presentation" Version="3.3.0" />
     <PackageReference Include="VNC.WPF.Presentation.Dx" Version="3.3.0" />
   </ItemGroup>
